--- a/web/indexMain.html
+++ b/web/indexMain.html
@@ -209,15 +209,15 @@
                     <div class="clientslide_content">
                         <ul class="clientslide_carousel">
                             <li>
-                                <img src="http://y.photo.qq.com/img?s=MckX6qnzw&l=y.jpg" title="大教室" alt="星舞社" /></li>
+                                <img src="images/ws1.jpg" title="大教室" alt="星舞社" /></li>
                             <li>
-                                <img src="http://y.photo.qq.com/img?s=2oEvyCT5j&l=y.jpg" title="休息室" alt="星舞社" /></li>
+                                <img src="images/ws2.jpg" title="休息室" alt="星舞社" /></li>
                             <li>
-                                <img src="http://y.photo.qq.com/img?s=LzM88ElTS&l=y.jpg" title="街舞教室" alt="星舞社" /></li>
+                                <img src="images/ws3.jpg" title="街舞教室" alt="星舞社" /></li>
                             <li>
-                                <img src="http://y.photo.qq.com/img?s=n7f3we0K5&l=y.jpg" title="拉丁教室" alt="星舞社" /></li>
+                                <img src="images/ws4.jpg" title="拉丁教室" alt="星舞社" /></li>
                             <li>
-                                <img src="http://y.photo.qq.com/img?s=x0wfWRHNQ&l=y.jpg" title="少儿舞蹈教室" alt="星舞社" /></li>
+                                <img src="images/ws5.jpg" title="少儿舞蹈教室" alt="星舞社" /></li>
                         </ul>
                         <div class="clr">
                         </div>
@@ -405,15 +405,17 @@
                         <!-- Portfolio Item4 starts -->
                         <li class="jazz video">
                             <div class="view view-eighth">
-                                <a href="http://player.youku.com/player.php/sid/XNjgyODg4MDI4/v.swf?VideoIDS=XNjgyODg4MDI4&winType=adshow&isAutoPlay=true" title="无锡情动宝龙演出 江南style" class="viewDetail lightbox ">
+                                <a href="http://player.youku.com/player.php/sid/XOTE3NDQxODg4/v.swf" title="无锡星舞社少儿街舞大东方演出" class="viewDetail lightbox ">
                                     <div class="clr">
                                         <div class="img4">
                                         </div>
                                         <div class="mask">
                                             <h2>
-                                                无锡情动宝龙演出</h2>
+                                                无锡星舞社少儿街舞大东方演出
+                                            </h2>
                                             <p>
-                                                无锡星舞社</p>
+                                                无锡星舞社
+                                            </p>
                                         </div>
                                     </div>
                                 </a>
