--- a/app/index.html
+++ b/app/index.html
@@ -3,36 +3,34 @@
   <head>
     <meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" >
 	<meta name="description" content="lovedance星舞社（www.xingwushe.com），专业舞蹈培训机构,是无锡现在最正规、专业的时尚舞社，中国国际标准舞竞技舞蹈联合总会无锡指定的唯一一家国标舞培训、考核机构。开设有了拉丁、爵士、街舞、肚皮、SASAL、摩登、形体芭蕾、少儿舞蹈、民族舞等课程。系统的课程，专业的师资，为怀抱不同舞蹈梦想的人士提供针对性的专业培训，帮助您早日实现舞蹈的梦想。舞动激情舞，舞动奇迹">
     <meta name="keywords" content="无锡舞蹈培训,无锡星舞社,无锡拉丁舞培训,无锡崇安区舞蹈培训,零基础舞蹈培训,无锡爵士舞培训,无锡少儿舞蹈培训,无锡街舞培训,无锡排舞,无锡编舞,舞蹈演出,无锡舞蹈考级,舞蹈视频,无锡舞蹈暑期培训,xingwushe">
-    <meta name="google-site-verification" content="LTLPFj29wtcHo5yVb00_-w-n_0n_bjVm3RzLvS9jJGA" /> 
-	<meta name="author" content="Endy Yu" />
+    <meta name="google-site-verification" content="LTLPFj29wtcHo5yVb00_-w-n_0n_bjVm3RzLvS9jJGA" > 
+	<meta name="author" content="Endy Yu">
 	
 	<title>无锡舞蹈培训,无锡少儿舞蹈培训,无锡星舞社官网,无锡星舞社舞蹈培训中心,Love dance 星舞社</title>
 	
 	
     <link rel="shortcut icon" href="images/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="57x57" href="images/apple-touch-icon.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="images/apple-touch-icon.png" >
+    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" >
+    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" >
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="/bower_components/mocha/mocha.css" />
+    <link rel="stylesheet" href="/bower_components/jquery-powertip-dist/dist/css/jquery.powertip.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link type="text/css" rel="stylesheet" href="styles/reset.css" />
-    <link type="text/css" rel="stylesheet" href="styles/style_green.css" id="color" />
-    <link type="text/css" rel="stylesheet" href="styles/responsive.css" />
-    <link type="text/css" rel="stylesheet" href="styles/typography.css" />
-	<link type="text/css" rel="stylesheet" href="styles/prettyPhoto.css" />
-    <link type="text/css" rel="stylesheet" href="styles/supersize.css" />
-    <link type="text/css" rel="stylesheet" href="styles/jquery.powertip.css" />
+    <link type="text/css" rel="stylesheet" href="styles/reset.css">
+    <link type="text/css" rel="stylesheet" href="styles/style_green.css" id="color">
+    <link type="text/css" rel="stylesheet" href="styles/responsive.css">
     <!-- endbuild -->
     <!-- build:js scripts/vendor/modernizr.js -->
-    <script src="/bower_components/modernizr/modernizr.js"></script>
+    <script src="/bower_components/modernizr/src/Modernizr.js"></script>
     <!-- endbuild -->
 	
     <!--[if lt IE 9]>
@@ -532,6 +530,28 @@
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/bower_components/chai/chai.js"></script>
+    <script src="/bower_components/mocha/mocha.js"></script>
+    <script src="/bower_components/jquery.scrollTo/jquery.scrollTo.js"></script>
+    <script src="/bower_components/jquery.localScroll/jquery.localScroll.js"></script>
+    <script src="/bower_components/get-style-property/get-style-property.js"></script>
+    <script src="/bower_components/get-size/get-size.js"></script>
+    <script src="/bower_components/matches-selector/matches-selector.js"></script>
+    <script src="/bower_components/eventie/eventie.js"></script>
+    <script src="/bower_components/doc-ready/doc-ready.js"></script>
+    <script src="/bower_components/eventEmitter/EventEmitter.js"></script>
+    <script src="/bower_components/fizzy-ui-utils/utils.js"></script>
+    <script src="/bower_components/outlayer/outlayer.js"></script>
+    <script src="/bower_components/masonry/masonry.js"></script>
+    <script src="/bower_components/isotope/js/isotope.js"></script>
+    <script src="/bower_components/jquery-sticky/jquery.sticky.js"></script>
+    <script src="/bower_components/jcarousel/dist/jquery.jcarousel.js"></script>
+    <script src="/bower_components/jquery.easing/js/jquery.easing.js"></script>
+    <script src="/bower_components/jquery-powertip-dist/dist/jquery.powertip.js"></script>
+    <script src="/bower_components/parallax/deploy/parallax.js"></script>
+    <script src="/bower_components/parallax/deploy/parallax.min.js"></script>
+    <script src="/bower_components/parallax/deploy/jquery.parallax.js"></script>
+    <script src="/bower_components/parallax/deploy/jquery.parallax.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -547,7 +567,7 @@
     <script type="text/javascript" src="scripts/jquery.isotope.min.js"></script>
     <script type="text/javascript" src="scripts/jquery.prettyPhoto.js"></script>
     <!-- Form Validation Script -->
-    <script type="text/javascript" src="scripts/jquery.validate.js"></script>
+   
     <!-- Sticky Menu Script -->
     <script type="text/javascript" src="scripts/jquery.sticky.js"></script>
     <script type="text/javascript" src="scripts/jquery.inview.js"></script>
